Set toolchain and compile options to use Java 20