@@ -42,8 +42,15 @@ dependencies {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
+        languageVersion.set(JavaLanguageVersion.of(20))
     }
+}
+
+tasks.compileJava {
+    options.compilerArgs.addAll(listOf(
+            "--release", "20",
+            "--enable-preview"
+    ))
 }
 
 publishing {
